--- a/src/lib/replace/README
+++ b/src/lib/replace/README
@@ -49,7 +49,6 @@ pread
 pwrite
 chown
 lchown
-getpass
 readline (the library)
 inet_ntoa
 inet_ntop
@@ -73,6 +72,7 @@ readlink
 symlink
 realpath
 poll
+setproctitle
 
 Types:
 bool
